// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppPage A prodcutFlavour is selected 1`] = `
Object {
  "endColor": undefined,
  "groupedAppVersionList": Array [
    Object {
      "appVersions": Array [
        Object {
          "id": "v4",
          "platform": "android",
          "productFlavour": "f2",
        },
        Object {
          "id": "v5",
          "platform": "android",
          "productFlavour": "f2",
        },
        Object {
          "id": "v6",
          "platform": "android",
          "productFlavour": "f2",
        },
      ],
      "groupName": "undefined",
    },
  ],
  "isCrossPlatform": false,
  "latestAppVersion": Object {
    "id": "v4",
    "platform": "android",
    "productFlavour": "f2",
  },
  "onSelectPlatform": [MockFunction],
  "productFlavours": Array [],
  "selectProductFalvour": [Function],
  "selectedPlatform": undefined,
  "selectedProductFlavour": "f2",
  "selectedVersionSortingOption": Object {
    "text": "Latest Build",
    "value": "latest-build",
  },
  "startColor": undefined,
  "versionSortOptionWithValueSelected": [Function],
  "versionSortingOptions": Array [
    Object {
      "text": "Latest Build",
      "value": "latest-build",
    },
    Object {
      "text": "Latest version",
      "value": "latest-version",
    },
  ],
  "warnings": undefined,
}
`;

exports[`AppPage renders empty page 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Versions
  </Connect(ShipHead)>
  <_default />
</Fragment>
`;

exports[`AppPage renders the list of app versions correctly 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Versions
  </Connect(ShipHead)>
  <_default
    groupedAppVersionList={
      Array [
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-123",
              "buildNumber": 32,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "123",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "32",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-456",
              "buildNumber": 31,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "456",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "31",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-789",
              "buildNumber": 30,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "789",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "30",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-135",
              "buildNumber": 29,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "135",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.2",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "29",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-246",
              "buildNumber": 28,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "246",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.2",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "28",
        },
      ]
    }
    isCrossPlatform={false}
    latestAppVersion={
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-123",
        "buildNumber": 32,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "description": "Some semi-long description",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "123",
        "ipaExportMethod": "development",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      }
    }
    onSelectPlatform={[MockFunction]}
    productFlavours={Array []}
    selectProductFalvour={[Function]}
    selectedVersionSortingOption={
      Object {
        "text": "Latest Build",
        "value": "latest-build",
      }
    }
    versionSortOptionWithValueSelected={[Function]}
    versionSortingOptions={
      Array [
        Object {
          "text": "Latest Build",
          "value": "latest-build",
        },
        Object {
          "text": "Latest version",
          "value": "latest-version",
        },
      ]
    }
  />
</Fragment>
`;

exports[`AppPage renders the loading placeholder 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Versions
  </Connect(ShipHead)>
  <_default />
</Fragment>
`;

exports[`AppPage when user selects sort by build numbers renders the list of app version grouped by build number 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Versions
  </Connect(ShipHead)>
  <_default
    groupedAppVersionList={
      Array [
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-123",
              "buildNumber": 32,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "123",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "32",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-456",
              "buildNumber": 31,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "456",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "31",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-789",
              "buildNumber": 30,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "789",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "30",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-135",
              "buildNumber": 29,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "135",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.2",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "29",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-246",
              "buildNumber": 28,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "246",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.2",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "28",
        },
      ]
    }
    isCrossPlatform={false}
    latestAppVersion={
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-123",
        "buildNumber": 32,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "description": "Some semi-long description",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "123",
        "ipaExportMethod": "development",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      }
    }
    onSelectPlatform={[MockFunction]}
    productFlavours={Array []}
    selectProductFalvour={[Function]}
    selectedVersionSortingOption={
      Object {
        "text": "Latest Build",
        "value": "latest-build",
      }
    }
    versionSortOptionWithValueSelected={[Function]}
    versionSortingOptions={
      Array [
        Object {
          "text": "Latest Build",
          "value": "latest-build",
        },
        Object {
          "text": "Latest version",
          "value": "latest-version",
        },
      ]
    }
  />
</Fragment>
`;

exports[`AppPage when user selects sort by versions renders the list of app version grouped by version 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Versions
  </Connect(ShipHead)>
  <_default
    groupedAppVersionList={
      Array [
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-123",
              "buildNumber": 32,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "123",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-456",
              "buildNumber": 31,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "456",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-789",
              "buildNumber": 30,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "789",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.3",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "1.0.3",
        },
        Object {
          "appVersions": Array [
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-135",
              "buildNumber": 29,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "135",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.2",
              "whatsNew": "Some longer whats-new",
            },
            Object {
              "appName": "Standup Timer",
              "appSlug": "app-slug-246",
              "buildNumber": 28,
              "buildSlug": "13245ads",
              "bundleId": "bundle-id",
              "description": "Some semi-long description",
              "iconUrl": "http://placekitten.com/160/160",
              "id": "246",
              "ipaExportMethod": "development",
              "keywords": "Keywords",
              "lastUpdate": 2018-09-22T12:42:31.000Z,
              "marketingUrl": "https://bitrise.io/marketing",
              "minimumOs": "10.2",
              "minimumSdk": "dunno",
              "packageName": "com.package.name",
              "platform": "ios",
              "promotionalText": "Promotional Text",
              "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
              "reviewNotes": "Review Notes",
              "scheme": "piramid",
              "screenshotDatas": Array [],
              "supportUrl": "https://bitrise.io/support",
              "supportedDeviceTypes": Array [
                "iphone",
                "ipad",
              ],
              "version": "1.0.2",
              "whatsNew": "Some longer whats-new",
            },
          ],
          "groupName": "1.0.2",
        },
      ]
    }
    isCrossPlatform={false}
    latestAppVersion={
      Object {
        "appName": "Standup Timer",
        "appSlug": "app-slug-123",
        "buildNumber": 32,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "description": "Some semi-long description",
        "iconUrl": "http://placekitten.com/160/160",
        "id": "123",
        "ipaExportMethod": "development",
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "screenshotDatas": Array [],
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      }
    }
    onSelectPlatform={[MockFunction]}
    productFlavours={Array []}
    selectProductFalvour={[Function]}
    selectedVersionSortingOption={
      Object {
        "text": "Latest version",
        "value": "latest-version",
      }
    }
    versionSortOptionWithValueSelected={[Function]}
    versionSortingOptions={
      Array [
        Object {
          "text": "Latest Build",
          "value": "latest-build",
        },
        Object {
          "text": "Latest version",
          "value": "latest-version",
        },
      ]
    }
  />
</Fragment>
`;

exports[`AppPageView when page has apps product flavours desktop 1`] = `
<Flex
  className="wrapper"
  direction="vertical"
>
  <Flex
    alignChildrenHorizontal="middle"
    direction="vertical"
    paddingHorizontal="x16"
    paddingVertical="x16"
  >
    <Base
      maxWidth={960}
      width="100%"
    >
      <Flex
        direction="horizontal"
        gap="x2"
        margin="x4"
        paddingHorizontal="x1"
        shrink={true}
        wrap={true}
      >
        <Flex
          key="0"
        >
          <_default
            large={true}
            onClick={[Function]}
            selected={false}
          >
            first
          </_default>
        </Flex>
        <Flex
          key="1"
        >
          <_default
            large={true}
            onClick={[Function]}
            selected={false}
          >
            second
          </_default>
        </Flex>
      </Flex>
      <_default
        detailsPagePath="/apps/undefined/versions/123/details"
        detailsPagePathHref="/version?appSlug=undefined&versionId=123"
        iconUrl="http://placekitten.com/160/160"
        note="Updated on September 22, 12:42"
        title="(32) v1.0.3 Standup Timer"
      />
      <Base
        className="sectionHeadingWrapper"
      >
        <Flex
          alignChildrenVertical="end"
          direction="horizontal"
          gap="x2"
        >
          <Flex
            grow={true}
            shrink={true}
          >
            <Text
              letterSpacing="x1"
              size="x5"
              weight="bold"
            >
              Version History
            </Text>
            <Divider
              color="gray-2"
              direction="horizontal"
              margin="x2"
              width="0.125rem"
            />
          </Flex>
          <Dropdown
            elevation="x1"
            fullWidth={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "Option 1",
                  "value": "option-1",
                },
                Object {
                  "text": "Option 2",
                  "value": "option-2",
                },
              ]
            }
            selected="option-1"
            width={168}
          >
            Option 1
          </Dropdown>
        </Flex>
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-123/versions/123/details"
          detailsPagePathHref="/version?appSlug=app-slug-123&versionId=123"
          key="0-0"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(32) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-456/versions/456/details"
          detailsPagePathHref="/version?appSlug=app-slug-456&versionId=456"
          key="0-1"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(31) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-789/versions/789/details"
          detailsPagePathHref="/version?appSlug=app-slug-789&versionId=789"
          key="0-2"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(30) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-135/versions/135/details"
          detailsPagePathHref="/version?appSlug=app-slug-135&versionId=135"
          key="0-3"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(29) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-246/versions/246/details"
          detailsPagePathHref="/version?appSlug=app-slug-246&versionId=246"
          key="0-4"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(28) Standup Timer"
        />
      </Base>
    </Base>
  </Flex>
  <Base
    paddingVertical="x6"
  >
    <_default />
  </Base>
</Flex>
`;

exports[`AppPageView when page has apps product flavours mobile 1`] = `
<Flex
  className="wrapper"
  direction="vertical"
>
  <Flex
    alignChildrenHorizontal="middle"
    direction="vertical"
    paddingHorizontal="x4"
    paddingVertical="x0"
  >
    <Base
      maxWidth={960}
      width="100%"
    >
      <Flex
        direction="vertical"
        gap="x2"
        margin="x4"
        paddingHorizontal="x1"
        shrink={true}
        wrap={true}
      >
        <Flex
          key="0"
        >
          <_default
            large={true}
            onClick={[Function]}
            selected={false}
          >
            first
          </_default>
        </Flex>
        <Flex
          key="1"
        >
          <_default
            large={true}
            onClick={[Function]}
            selected={false}
          >
            second
          </_default>
        </Flex>
      </Flex>
      <_default
        detailsPagePath="/apps/undefined/versions/123/details"
        detailsPagePathHref="/version?appSlug=undefined&versionId=123"
        iconUrl="http://placekitten.com/160/160"
        note="Sep 22, 12:42"
        title="(32) v1.0.3 Standup Timer"
      />
      <Base
        className="sectionHeadingWrapper"
      >
        <Flex
          alignChildrenVertical="end"
          direction="horizontal"
          gap="x2"
        >
          <Flex
            grow={true}
            shrink={true}
          >
            <Text
              letterSpacing="x1"
              size="x5"
              weight="bold"
            >
              Version History
            </Text>
            <Divider
              color="gray-2"
              direction="horizontal"
              margin="x2"
              width="0.125rem"
            />
          </Flex>
          <Dropdown
            elevation="x1"
            fullWidth={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "Option 1",
                  "value": "option-1",
                },
                Object {
                  "text": "Option 2",
                  "value": "option-2",
                },
              ]
            }
            selected="option-1"
            width={168}
          >
            Option 1
          </Dropdown>
        </Flex>
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-123/versions/123/details"
          detailsPagePathHref="/version?appSlug=app-slug-123&versionId=123"
          key="0-0"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(32) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-456/versions/456/details"
          detailsPagePathHref="/version?appSlug=app-slug-456&versionId=456"
          key="0-1"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(31) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-789/versions/789/details"
          detailsPagePathHref="/version?appSlug=app-slug-789&versionId=789"
          key="0-2"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(30) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-135/versions/135/details"
          detailsPagePathHref="/version?appSlug=app-slug-135&versionId=135"
          key="0-3"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(29) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-246/versions/246/details"
          detailsPagePathHref="/version?appSlug=app-slug-246&versionId=246"
          key="0-4"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(28) Standup Timer"
        />
      </Base>
    </Base>
  </Flex>
  <Base
    paddingVertical="x6"
  >
    <_default />
  </Base>
</Flex>
`;

exports[`AppPageView when page has apps product flavours tablet 1`] = `
<Flex
  className="wrapper"
  direction="vertical"
>
  <Flex
    alignChildrenHorizontal="middle"
    direction="vertical"
    paddingHorizontal="x4"
    paddingVertical="x0"
  >
    <Base
      maxWidth={960}
      width="100%"
    >
      <Flex
        direction="horizontal"
        gap="x2"
        margin="x4"
        paddingHorizontal="x1"
        shrink={true}
        wrap={true}
      >
        <Flex
          key="0"
        >
          <_default
            large={true}
            onClick={[Function]}
            selected={false}
          >
            first
          </_default>
        </Flex>
        <Flex
          key="1"
        >
          <_default
            large={true}
            onClick={[Function]}
            selected={false}
          >
            second
          </_default>
        </Flex>
      </Flex>
      <_default
        detailsPagePath="/apps/undefined/versions/123/details"
        detailsPagePathHref="/version?appSlug=undefined&versionId=123"
        iconUrl="http://placekitten.com/160/160"
        note="Updated on September 22, 12:42"
        title="(32) v1.0.3 Standup Timer"
      />
      <Base
        className="sectionHeadingWrapper"
      >
        <Flex
          alignChildrenVertical="end"
          direction="horizontal"
          gap="x2"
        >
          <Flex
            grow={true}
            shrink={true}
          >
            <Text
              letterSpacing="x1"
              size="x5"
              weight="bold"
            >
              Version History
            </Text>
            <Divider
              color="gray-2"
              direction="horizontal"
              margin="x2"
              width="0.125rem"
            />
          </Flex>
          <Dropdown
            elevation="x1"
            fullWidth={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "Option 1",
                  "value": "option-1",
                },
                Object {
                  "text": "Option 2",
                  "value": "option-2",
                },
              ]
            }
            selected="option-1"
            width={168}
          >
            Option 1
          </Dropdown>
        </Flex>
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-123/versions/123/details"
          detailsPagePathHref="/version?appSlug=app-slug-123&versionId=123"
          key="0-0"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(32) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-456/versions/456/details"
          detailsPagePathHref="/version?appSlug=app-slug-456&versionId=456"
          key="0-1"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(31) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-789/versions/789/details"
          detailsPagePathHref="/version?appSlug=app-slug-789&versionId=789"
          key="0-2"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(30) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-135/versions/135/details"
          detailsPagePathHref="/version?appSlug=app-slug-135&versionId=135"
          key="0-3"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(29) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-246/versions/246/details"
          detailsPagePathHref="/version?appSlug=app-slug-246&versionId=246"
          key="0-4"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(28) Standup Timer"
        />
      </Base>
    </Base>
  </Flex>
  <Base
    paddingVertical="x6"
  >
    <_default />
  </Base>
</Flex>
`;

exports[`AppPageView when page has apps renders page with apps 1`] = `
<Flex
  className="wrapper"
  direction="vertical"
>
  <Flex
    alignChildrenHorizontal="middle"
    direction="vertical"
    paddingHorizontal="x16"
    paddingVertical="x16"
  >
    <Base
      maxWidth={960}
      width="100%"
    >
      <_default
        detailsPagePath="/apps/undefined/versions/123/details"
        detailsPagePathHref="/version?appSlug=undefined&versionId=123"
        iconUrl="http://placekitten.com/160/160"
        note="Updated on September 22, 12:42"
        title="(32) v1.0.3 Standup Timer"
      />
      <Base
        className="sectionHeadingWrapper"
      >
        <Flex
          alignChildrenVertical="end"
          direction="horizontal"
          gap="x2"
        >
          <Flex
            grow={true}
            shrink={true}
          >
            <Text
              letterSpacing="x1"
              size="x5"
              weight="bold"
            >
              Version History
            </Text>
            <Divider
              color="gray-2"
              direction="horizontal"
              margin="x2"
              width="0.125rem"
            />
          </Flex>
          <Dropdown
            elevation="x1"
            fullWidth={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "Option 1",
                  "value": "option-1",
                },
                Object {
                  "text": "Option 2",
                  "value": "option-2",
                },
              ]
            }
            selected="option-1"
            width={168}
          >
            Option 1
          </Dropdown>
        </Flex>
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-123/versions/123/details"
          detailsPagePathHref="/version?appSlug=app-slug-123&versionId=123"
          key="0-0"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(32) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-456/versions/456/details"
          detailsPagePathHref="/version?appSlug=app-slug-456&versionId=456"
          key="0-1"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(31) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-789/versions/789/details"
          detailsPagePathHref="/version?appSlug=app-slug-789&versionId=789"
          key="0-2"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(30) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-135/versions/135/details"
          detailsPagePathHref="/version?appSlug=app-slug-135&versionId=135"
          key="0-3"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(29) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-246/versions/246/details"
          detailsPagePathHref="/version?appSlug=app-slug-246&versionId=246"
          key="0-4"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(28) Standup Timer"
        />
      </Base>
    </Base>
  </Flex>
  <Base
    paddingVertical="x6"
  >
    <_default />
  </Base>
</Flex>
`;

exports[`AppPageView when page has apps shows a warning 1`] = `
<Flex
  className="wrapper"
  direction="vertical"
>
  <Flex
    alignChildrenHorizontal="middle"
    direction="vertical"
    paddingHorizontal="x16"
    paddingVertical="x16"
  >
    <Base
      maxWidth={960}
      width="100%"
    >
      <Base
        margin="x4"
      >
        <Notification
          key="0"
          type="warning"
        >
          Whoops, something went wrong..
        </Notification>
      </Base>
      <_default
        detailsPagePath="/apps/undefined/versions/123/details"
        detailsPagePathHref="/version?appSlug=undefined&versionId=123"
        iconUrl="http://placekitten.com/160/160"
        note="Updated on September 22, 12:42"
        title="(32) v1.0.3 Standup Timer"
      />
      <Base
        className="sectionHeadingWrapper"
      >
        <Flex
          alignChildrenVertical="end"
          direction="horizontal"
          gap="x2"
        >
          <Flex
            grow={true}
            shrink={true}
          >
            <Text
              letterSpacing="x1"
              size="x5"
              weight="bold"
            >
              Version History
            </Text>
            <Divider
              color="gray-2"
              direction="horizontal"
              margin="x2"
              width="0.125rem"
            />
          </Flex>
          <Dropdown
            elevation="x1"
            fullWidth={false}
            onChange={[Function]}
            options={
              Array [
                Object {
                  "text": "Option 1",
                  "value": "option-1",
                },
                Object {
                  "text": "Option 2",
                  "value": "option-2",
                },
              ]
            }
            selected="option-1"
            width={168}
          >
            Option 1
          </Dropdown>
        </Flex>
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-123/versions/123/details"
          detailsPagePathHref="/version?appSlug=app-slug-123&versionId=123"
          key="0-0"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(32) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-456/versions/456/details"
          detailsPagePathHref="/version?appSlug=app-slug-456&versionId=456"
          key="0-1"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(31) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-789/versions/789/details"
          detailsPagePathHref="/version?appSlug=app-slug-789&versionId=789"
          key="0-2"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(30) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-135/versions/135/details"
          detailsPagePathHref="/version?appSlug=app-slug-135&versionId=135"
          key="0-3"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(29) Standup Timer"
        />
        <_default
          descriptionPlaceholder="No commit message"
          detailsPagePath="/apps/app-slug-246/versions/246/details"
          detailsPagePathHref="/version?appSlug=app-slug-246&versionId=246"
          key="0-4"
          note="Updated on September 22, 12:42"
          platform="ios"
          title="(28) Standup Timer"
        />
      </Base>
    </Base>
  </Flex>
  <Base
    paddingVertical="x6"
  >
    <_default />
  </Base>
</Flex>
`;
